<resources>
    <string name="app_name">Tomatify App</string>
    <string name="welcome_nback">Welcome \nBack!</string>
    <string name="tomatobg">tomatobg</string>
    <string name="email">Email</string>
    <string name="input_your_email">Input your Email..</string>
    <string name="password">Password</string>
    <string name="input_your_password">Input your Password..</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_member">Not a member? </string>
    <string name="join_now"> Join now!</string>
    <string name="create_an_naccount">Create an\nAccount</string>
    <string name="register">Register</string>
    <string name="sign_in_now"> Sign in now!</string>
    <string name="already_have_an_account">Already have an Account? </string>
    <string name="name">Name</string>
    <string name="input_your_name">Input Your Name..</string>
    <string name="username">UserName</string>
    <string name="discuss_caption">Discuss caption</string>
    <string name="avatar">avatar</string>
    <string name="password_can_t_be_lower_than_8_characters">Password must be more than 8 characters!</string>
    <string name="txt_goback">Back</string>
    <string name="email_invalid">Email Invalid</string>
    <string name="name_invalid">Name Invalid</string>
    <string name="register_success">Register Success</string>
    <string name="password_are_not_the_same">Password are not the same</string>
    <string name="email_is_already_taken">This email is already taken!</string>
    <string name="error_register">Error Register</string>
    <string name="signin_failed">Sign In Failed</string>
    <string name="scanbutton">scanbutton</string>
    <string name="welcome_msg">Welcome\nBack!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_tittle">News Tittle</string>
    <string name="desc_news">Lörem ipsum anang jäbelt det vill säga dissade, planing dong. Biment aling kavis tesa kärlekslås.</string>
    <string name="date_or_source">detikFinanceRabu, 31 Mei 2023 17:45 WIB</string>
    <string name="breaking_news">Breaking News</string>
    <string name="img_tittle">img_tittle</string>
    <string name="img_user">img_user</string>
    <string name="tab_layout">tab layout</string>
    <string name="national">National</string>
    <string name="international">International</string>
    <string name="img_desc">img_desc</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="user_name">User Name</string>
    <string name="user_email">user email</string>
    <string name="log_out">Log Out</string>
    <string name="capture">Capture</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="predict">Predict</string>
    <string name="take_photo_or_upload">Take Photo or Upload</string>
    <string name="gambar_tomato">gambar tomato</string>
    <string name="predict_your_tomato_plant">Predict Your Tomato Plant</string>
    <string name="failed_to_take_picture">Failed to take picture</string>
    <string name="class_predict">class predict</string>
    <string name="description">Description</string>
    <string name="prevention">prevention</string>
    <string name="list_predict">list predict</string>
    <string name="txt_upload_dari">Upload From</string>
    <string name="txt_close_dialog">Close\n</string>
    <string name="txt_camera">Camera</string>
    <string name="txt_gallery">Gallery</string>
    <string name="email_verification_message">Please Check Your Email For Verification</string>
    <string name="ok">Ok!</string>
    <string name="contact_us">Contact Us</string>
    <string name="desease_prevention">Desease Prevention</string>
    <string name="desease_description">Desease Description</string>
    <string name="plant_desease">Plant Desease</string>
</resources>