<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_color"
    tools:context=".ui.auth.SignInActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="543dp"
        android:layout_height="983dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="264dp"
        android:contentDescription="@string/tomatobg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tomato_bg"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/welcome_nback"
        android:textColor="@color/pc"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/sign_in_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="55dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            android:layout_margin="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_hint"
                android:hint="@string/input_your_email"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/pc" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            android:layout_margin="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pw_hint"
                android:hint="@string/input_your_password"
                android:background="@drawable/rounded_corner"
                android:textColor="@color/pc"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/b_signin"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_corner_bt"
            android:textSize="25sp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/sign_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/not_a_member"
                android:textAlignment="textEnd"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/add_1"
                />

            <TextView
                android:id="@+id/tv_regis"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/join_now"
                android:textAlignment="textStart"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/add_2"/>

        </LinearLayout>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>