<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_color"
    tools:context=".ui.auth.RegisterActivity">

    <ImageView
        android:alpha="0"
        android:id="@+id/imageView3"
        android:layout_width="543dp"
        android:layout_height="983dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="264dp"
        android:contentDescription="@string/tomatobg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tomato_bg"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:alpha="0"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/create_an_naccount"
        android:textColor="@color/pc"
        android:textSize="45sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/sign_in_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:alpha="0"
                android:id="@+id/title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="320dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:alpha="0"
                android:id="@+id/edRegisterName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:textSize="12sp"
                android:hint="@string/input_your_name"
                android:importantForAutofill="no"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_name"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp" />

            <TextView
                android:alpha="0"
                android:id="@+id/title_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="323dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edRegisterName" />

            <com.capstone.tomatifyapp.ui.custom_ui.CustomEmailEditText
                android:alpha="0"
                android:id="@+id/edRegisterEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/input_your_email"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_email" />

            <TextView
                android:alpha="0"
                android:id="@+id/title_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="320dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edRegisterEmail" />

            <com.capstone.tomatifyapp.ui.custom_ui.CustomPasswordEditText
                android:alpha="0"
                android:id="@+id/edRegisterPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="35dp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/input_your_password"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_password" />

            <com.capstone.tomatifyapp.ui.custom_ui.CustomButton
                android:alpha="0"
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="35dp"
                android:enabled="false"
                android:fontFamily="@font/montserrat_black"
                android:text="@string/register"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edRegisterPassword" />

            <TextView
                android:alpha="0"
                android:id="@+id/member"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="54dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/already_have_an_account"
                android:textAlignment="textEnd"
                android:textColor="#8D6E63"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister"
                app:layout_constraintVertical_bias="0.6" />

            <TextView
                android:alpha="0"
                android:id="@+id/tv_Signin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="54dp"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:paddingStart="5dp"
                android:text="@string/sign_in_now"
                android:textAlignment="textStart"
                android:textColor="@color/add_2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/member"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister"
                tools:ignore="RtlSymmetry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rlLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"/>

        <ProgressBar
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>