<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.predict.ResultPredictActivity">

    <TextView
        android:id="@+id/tv_predict_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:text="@string/class_predict"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="126dp" />

    <TextView
        android:id="@+id/tv_prevention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/prevention"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_predict_description"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/tv_predict_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_predict_description" />

    <TextView
        android:id="@+id/tv_predict_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/description"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tv_predict_result"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/tv_predict_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_predict_result" />

</androidx.constraintlayout.widget.ConstraintLayout>