<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.predict.PredictActivity">

    <TextView
        android:id="@+id/txt_label_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/predict_your_tomato_plant"
        android:textAlignment="center"
        android:textColor="@color/pc"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_add_story"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_label_photo"
        android:contentDescription="@string/gambar_tomato" />

    <LinearLayout
        android:id="@+id/ll_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/img_add_story"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/img_add_story"
        app:layout_constraintTop_toBottomOf="@+id/img_add_story">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_desc"
            android:src="@drawable/baseline_camera_alt_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/take_photo_or_upload"
            android:textAlignment="textStart"
            android:textColor="@color/black" />


    </LinearLayout>

    <com.capstone.tomatifyapp.ui.custom_ui.CustomButton
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="111dp"
        android:layout_marginBottom="45dp"
        android:enabled="true"
        android:text="@string/predict"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_add_story"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_add_story"
        app:layout_constraintTop_toBottomOf="@+id/ll_add_image"
        app:layout_constraintVertical_bias="0.725" />

    <RelativeLayout
        android:id="@+id/rlLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        android:elevation="99dp"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black" />

        <ProgressBar
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>